--- a/Index.html
+++ b/Index.html
@@ -88,7 +88,7 @@
 <body>
 <!--&lt;!&ndash;更改为你女朋友的头像&ndash;&gt;-->
 <div class="cs">
-    <img src="img\107461648601362888.jpg" id="logo">
+    <img src="107461648601362888.jpg" id="logo">
 </div>
 <canvas class="canvas" width="1820" height="905"></canvas>
 <p class="text" style="color: #ed3073;">
