--- a/Index.html
+++ b/Index.html
@@ -90,6 +90,12 @@
 <div class="cs">
     <img src="107461648601362888.jpg" id="logo">
 </div>
+<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
+ 
+    src="2.mp3">
+ 
+ 
+</audio>
 <canvas class="canvas" width="1820" height="905"></canvas>
 <p class="text" style="color: #ed3073;">
     已经认识你
