--- a/Index.html
+++ b/Index.html
@@ -128,7 +128,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
             //想说的话
-            S.UI.simulate("高总|生日快乐哟|#countdown 3|#rectangle 5x5|#circle 12 |#time");
+            S.UI.simulate("高总|生快哟|#countdown 3|#rectangle 5x5|#circle 12 |#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
