--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@
 						</div>
 					</div>
 					<div class="centent-center" id="text"></div>
-					<div onclick="getClass()" class="centent-bottom"><button type="button" onclick="window.location.href ='index1.html'">点我</button></div>
+					<div onclick="window.location.href='index1.html'" class="centent-bottom">点我</div>
 				</div>
 			</div>
 		</div>
